# isbnx

./: .gitignore  .pre-commit-config.yaml  CODE_REVIEW_PLAN.md  CODE_REVIEW_REPORT.md  README.md  benchmark_parallel.py  mkdocs.yml  pyproject.toml  run_batch_demo.py  采用opencv-python-headless.md
docs/: index.md  isbnx_vs_cipx_report.md  requirements.txt
docs/api/: batch.md  config.md  detector.md  isbnx.md  models.md  ocr.md  utils.md
docs/flow/: archive_flow.md  epub_flow.md  image_flow.md  pdf_flow.md
docs/javascripts/: mathjax.js  mermaid.js
src/isbnx/: __init__.py  __main__.py  archive.py  batch.py  config.py  detector.py  epub.py  isbnx.py  mobi.py  models.py  pdf.py  pdf_type.py
src/isbnx/batch/: __init__.py  config.py  extractor.py  renamer.py  reporter.py
src/isbnx/dedup/: dedup.py  md5_cache.py
src/isbnx/ocr/: __init__.py  isbnx_pyzbar.py  isbnx_rapiocr.py
src/isbnx/utils/: __init__.py  cip_rules.py  filename.py  io.py  isbn_utils.py
tests/: _compare_common.py  _debug_archives.py  _debug_diff.py  test_mobis.py
tests/output/: a.txt  compare_archives.csv  compare_epubs.csv  compare_images.csv  compare_pdfs.csv
