[project]
name = "isbnx"
version = "0.0.13"
description = "从 PDF、图片、压缩包和 EPUB 文件中提取 ISBN 号，支持 ONNX 检测和 OCR 识别"
readme = "README.md"
authors = [
    { name = "zscmmm", email = "111739721+zscmmm@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = [
    "cfunbook>=0.1.18",
    "loguru>=0.7.3",
    "mneia-isbn>=0.0.3",
    "onnxruntime>=1.27.0",
    "pillow>=12.2.0",
    "pydantic-settings>=2.14.2",
    "pymupdf>=1.27.2.3",
    "pyzbar>=0.1.9",
    "rapidocr>=3.9.0",
    "rarfile>=4.2",
    "py7zr>=0.22",
    "send2trash>=1.8.0",
    "dedupx>=0.1.0",
    "pdf-inspector>=0.2.0",
    "opencv-python-headless>=4.13.0.92",
]

[dependency-groups]
dev = [
    "cfunbook>=0.1.16",
    "pdf_inspector>=0.2.0",
    "mkdocs>=1.6.1,<2.0",
    "mkdocs-autorefs>=1.4.1,<2.0",
    "mkdocs-material>=9.6.12,<10.0",
    "mkdocstrings[python]>=0.29.1,<1.0",
    "pytest>=8.3.5",
    "pre-commit>=4.6.0",
    "pandas>=3.0.3",
    "pymdown-extensions>=11.0.1",
]


[project.scripts]
isbnx = "isbnx:main"

[build-system]
requires = ["uv_build>=0.11.24,<0.12.0"]
build-backend = "uv_build"

[tool.uv]
exclude-dependencies = ["opencv-python",]

[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
default = true



[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]  # 行长度由 formatter 处理

[tool.ruff.format]
preview = true
docstring-code-format = true

[project.urls]
Homepage = "https://github.com/zscmmm/isbnx"
Documentation = "https://isbnx.readthedocs.org"
Repository = "https://github.com/zscmmm/isbnx.git"
Issues = "https://github.com/zscmmm/isbnx/issues"
Changelog = "https://github.com/zscmmm/isbnx/blob/main/CHANGELOG.md"
